force-app/main/default/objects/Requirements__c/Requirements__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC072419- Created for PVL phase 1</description>
    <label>Requirement</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>