force-app/main/default/objects/Requirements__c/fields/ParentRequirement__c.field-meta.xml
<CustomField>
    <fullName>ParentRequirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC072419- Created for PVL phase 1</description>
    <label>Parent Requirement</label>
    <referenceTo>Requirements__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>