force-app/main/default/objects/Requirements__c/fields/RequirementFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>RequirementFeeAmount__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <label>Requirement Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>