force-app/main/default/objects/Requirements__c/fields/RequirementLongDescription__c.field-meta.xml
<CustomField>
    <fullName>RequirementLongDescription__c</fullName>
    <description>PacPoint-IC072419- Created for PVL phase 1</description>
    <label>Requirement Long Description</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>