force-app/main/default/objects/Requirements__c/fields/RequirementShortDescription__c.field-meta.xml
<CustomField>
    <fullName>RequirementShortDescription__c</fullName>
    <description>PacPoint-MV081919 - Created for PVL phase 1</description>
    <label>Requirement Short Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>