force-app/main/default/objects/Requirements__c/fields/SubRequirementNumber__c.field-meta.xml
<CustomField>
    <fullName>SubRequirementNumber__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <label>Sub Requirement Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>