force-app/main/default/objects/Requirements__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ALIASRequirementNumber__c</columns>
    <columns>NAME</columns>
    <columns>ParentRequirement__c</columns>
    <columns>SubRequirementNumber__c</columns>
    <columns>RequirementFeeAmount__c</columns>
    <columns>RequirementCategory__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RequirementShortDescription__c</columns>
    <columns>RequirementLongDescription__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>